Save skill to user